--- a/.cproject
+++ b/.cproject
@@ -23,7 +23,13 @@
 								<option id="intel.compilestep.preprocessor.defsym.2092334741" name="Preprocessor Definitions (-D)" superClass="intel.compilestep.preprocessor.defsym" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="NDEBUG"/>
 								</option>
-								<option id="intel.compilestep.coptions.567593646" name="Additional Options" superClass="intel.compilestep.coptions" value="-ipo -xHOST -O3" valueType="string"/>
+								<option id="intel.compilestep.coptions.567593646" name="Additional Options" superClass="intel.compilestep.coptions" value="" valueType="string"/>
+								<option id="intel.compilestep.optimization.optprefetch.1807505230" name="Enable Prefetch Insertion (-opt-prefetch[=n])" superClass="intel.compilestep.optimization.optprefetch" value="optprefetch.three" valueType="enumerated"/>
+								<option id="intel.compilestep.optimization.ipo.1699619276" name="Enable Whole Program Optimization (-ipo)" superClass="intel.compilestep.optimization.ipo" value="true" valueType="boolean"/>
+								<option id="intel.compilestep.optimization.inline.expand1.1136322400" name="Inline Function Expansion" superClass="intel.compilestep.optimization.inline.expand1" value="inl.exp1.anysuitable" valueType="enumerated"/>
+								<option id="intel.compilestep.general.optimization2.1065350418" name="Optimization Level" superClass="intel.compilestep.general.optimization2" value="general.opt.speedHLO" valueType="enumerated"/>
+								<option id="intel.compilestep.cg.reqintelextensions4.831332356" name="Intel Processor-Specific Optimization" superClass="intel.compilestep.cg.reqintelextensions4" value="intel.cg.reqhost" valueType="enumerated"/>
+								<option id="intel.compilestep.float.fpmodel.261768298" name="Floating Point Model" superClass="intel.compilestep.float.fpmodel" value="fpmodel.fast.2" valueType="enumerated"/>
 								<inputType id="intel.cpp.compilestep.input.127043470" superClass="intel.cpp.compilestep.input"/>
 							</tool>
 							<tool command="mpicc" id="intel.c.compilestep.linux.x86_64.exe.rel.1410068414_11.1.0" name="Intel Intel(R) 64 C Compiler" superClass="intel.c.compilestep.linux.x86_64.exe.rel_11.1.0">
@@ -52,6 +58,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/iso7_src}&quot;"/>
 									<listOptionValue builtIn="false" value="/home/dmarce1/lib"/>
 								</option>
+								<option id="intel.linkstep.general.optimization2.1410655593" name="Optimization Level" superClass="intel.linkstep.general.optimization2" value="general.opt.speedHLO" valueType="enumerated"/>
 								<inputType id="intel.linkstep.input.803248780" superClass="intel.linkstep.input">
 									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
 									<additionalInput kind="additionalinput" paths="$(LIBS)"/>
