--- a/.cproject
+++ b/.cproject
@@ -39,6 +39,7 @@
 								<option id="intel.compilestep.float.speculation.2030649195" name="Floating-Point Speculation" superClass="intel.compilestep.float.speculation" value="speculation.fast" valueType="enumerated"/>
 								<option id="intel.compilestep.diagnostics.sc.level11.1550665574" name="Level Of Source Code Analysis" superClass="intel.compilestep.diagnostics.sc.level11" value="diagnostics.sv.default" valueType="enumerated"/>
 								<option id="intel.compilestep.language.ansi_conformance.1492713799" name="ANSI Conformance" superClass="intel.compilestep.language.ansi_conformance" value="ansi_conformance.1" valueType="enumerated"/>
+								<option id="intel.compilestep.optimization.no.intrin.inline.153181548" name="Disable Intrinsic Inline Expansion (-nolib-inline)" superClass="intel.compilestep.optimization.no.intrin.inline" value="false" valueType="boolean"/>
 								<inputType id="intel.cpp.compilestep.input.127043470" superClass="intel.cpp.compilestep.input"/>
 							</tool>
 							<tool command="mpicc" id="intel.c.compilestep.linux.x86_64.exe.rel.1410068414_11.1.0" name="Intel Intel(R) 64 C Compiler" superClass="intel.c.compilestep.linux.x86_64.exe.rel_11.1.0">
